2010-05-06  Jeffrey Stedfast  <fejj@novell.com>

	* plugin-class.cpp (npvariant_is_typeface): New helper function to
	determine if an NPVariant is a GlyphTypeface or not.
	(MoonlightGlyphsObject::Invoke): Allow the first arg to
	setFontSource() to also be a GlyphTypeface and call the
	appropriate Glyphs::SetFontSource() method depending on what the
	user passes in.

2010-05-05  Jeffrey Stedfast  <fejj@novell.com>

	* plugin-class.cpp (value_to_variant): Add support for
	GlyphTypefaces.
	(npvariant_is_moonlight_object): Added
	MoonlightGlyphTypefaceClass.
	(MoonlightGlyphTypeface): Implemented.
	(MoonlightGlyphTypefaceType): Implemented.
	(MoonlightGlyphTypefaceCollectionObject): Implemented.
	(MoonlightGlyphTypefaceCollectionType): Implemented.
	(moonlight_settings_mapping): Added "getsystemglyphtypefaces"
	which is a new method in 3.0
	(MoonlightSettingsObject::Invoke): Added support for the
	GetSystemGlyphTypefaces method.
	(EventObjectCreateWrapper): Added mapping to
	GlyphTypefaceCollection.
	(plugin_init_classes): Init mappings for GlyphTypeface[Collection].
	(plugin_destroy_classes): Destroy the mapping for GlyphTypeface.

2010-04-30  Andreia Gaita  <avidigal@novell.com>

	* plugin.cpp: set the surface on the bridge

2010-04-28  Andreia Gaita  <avidigal@novell.com>

	* Makefile.am, plugin.cpp: remove ff36 bridge.

2010-04-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.mdp: Updated with new files.

2010-04-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* npstream-request.cpp|h:
	* plugin-downloader.cpp|h: Update according to DownloaderRequest api changes.

2010-04-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* plugin.mdp: Update with new files, remove deleted files.

2010-04-27  Jeffrey Stedfast  <fejj@novell.com>

	* plugin.cpp (TryLoadBridge): Set the Surface on the Bridge rather
	than the plugin.

	* curl/*.cpp|h: Updated for API changes.

	* browser-bridge.h (BrowserBridge): Instead of having a